--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,18 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    // Retrofit with Moshi Converter
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+
+    // Moshi
+    implementation 'com.squareup.moshi:moshi-kotlin:1.9.3'
+
+    // Coil
+    implementation "io.coil-kt:coil:1.1.1"
+
+    // Room
+    implementation "androidx.room:room-runtime:2.3.0"
+//    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:2.3.0"
 }
