--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,9 @@ dependencies {
 
     // Room
     implementation "androidx.room:room-runtime:2.3.0"
-//    kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:2.3.0"
+
+    // Lifecycle Components
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0"
 }
